Fix landing page being too large

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -10,7 +10,7 @@
 
 #navbar.collapsed {
     background-color: var(--background);
-    padding: 1.5rem 4rem;
+    padding: 1rem 4rem;
 }
 
 #nav-content {
@@ -22,12 +22,14 @@
 }
 
 #navbar .title {
-    font-size: 2rem;
     font-weight: bold;
+    font-size: 1.5rem;
+    text-decoration: none;
+    color: white;
 }
 
 #navbar .btn {
-    font-size: 2em;
+    font-size: 1.25em;
 }
 
 #tagline {
@@ -39,48 +41,56 @@
     align-items: center;
 }
 
+#tagline h1 {
+    z-index: 10;
+}
+
 #cards-overlay {
     display: flex;
     flex-direction: column;
     align-items: end;
-    filter: contrast(0.6);
+    justify-content: end;
     position: absolute;
-    top: 12rem;
+    bottom: -2rem;
     right: 10rem;
+    transform: perspective(500px) rotateX(10deg) rotateZ(5deg);
 }
 
 #cards-overlay .card {
-    width: 16rem;
+    width: 12rem;
     user-select: none;
     pointer-events: none;
 }
 
 #cards-overlay .card:nth-child(1) {
+    filter: contrast(0.6);
     z-index: 3;
-    transform: rotate3d(0, 5, 3, 45deg);
+    transform: rotate(20deg);
 }
 
 #cards-overlay .card:nth-child(2) {
+    filter: contrast(0.66);
     z-index: 2;
     margin-top: -4rem;
-    margin-right: 8rem;
-    transform: rotate3d(0, 1, 4, 45deg);
+    margin-right: 7rem;
+    transform: rotate(40deg);
 }
 
 #cards-overlay .card:nth-child(3) {
+    filter: contrast(0.7);
     z-index: 1;
-    margin-top: -10rem;
-    margin-right: 22rem;
-    transform: rotate3d(0, 1, 3, 80deg);
+    margin-top: -8rem;
+    margin-right: 16rem;
+    transform: rotate(60deg);
 }
 
 h1 {
-    font-size: 5.5rem;
+    font-size: 3.5rem;
     font-weight: lighter;
 }
 
 h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     letter-spacing: 0.075rem;
     font-weight: lighter;
 }
@@ -91,13 +101,13 @@ p {
 }
 
 .section {
-    font-size: 2rem;
+    font-size: 1.5rem;
     background: radial-gradient(circle, #111 40%, #151515 100%);
-    padding: 10rem 8rem;
+    padding: 6rem 5rem;
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 1rem;
+    gap: 0.75rem;
 }
 
 .section .section-title {
@@ -107,9 +117,26 @@ p {
 }
 
 .section-cta {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
 }
 
 .btn {
     padding: 0.25em 1em;
+}
+
+@media only screen and (max-width: 1100px) {
+    #tagline {
+        padding: 0;
+        text-align: center;
+        justify-content: center;
+        text-shadow: 0 0 50px black;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    #cards-overlay {
+        right: 0;
+    }
 }
